--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-redux": "8.0.1",
     "react-scripts": "4.0.3",
     "redux": "4.2.0",
+    "redux-saga": "^1.1.3",
     "semantic-ui-css": "2.4.1",
     "semantic-ui-react": "2.0.4",
     "web-vitals": "1.0.1"
